--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
-  "packageManager": "pnpm@8.6.11",
+  "packageManager": "pnpm@9.14.2",
+  "type": "module",
   "scripts": {
     "build": "vite build",
     "dev": "vite --host 0.0.0.0",
@@ -11,38 +12,38 @@
     "up": "taze major -I"
   },
   "dependencies": {
-    "@logicflow/core": "^2.0.7",
+    "@logicflow/core": "^2.0.8",
     "@vueuse/core": "v9.1.0",
     "@vueuse/head": "v0.7.9",
-    "axios": "^1.4.0",
-    "canvas-confetti": "^1.6.0",
+    "axios": "^1.7.8",
+    "canvas-confetti": "^1.9.3",
     "markdown-it-prism": "^2.3.0",
-    "vite-plugin-vue-markdown": "0.23.7",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vite-plugin-vue-markdown": "0.23.8",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.40.0",
-    "@iconify-json/carbon": "^1.1.18",
-    "@iconify-json/mdi": "^1.1.53",
-    "@types/canvas-confetti": "^1.6.0",
-    "@types/node": "^18.17.1",
-    "@unocss/reset": "^0.54.1",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/test-utils": "^2.4.1",
-    "eslint": "^8.46.0",
-    "jsdom": "^22.1.0",
-    "pnpm": "^8.6.11",
+    "@antfu/eslint-config": "^3.10.0",
+    "@iconify-json/carbon": "^1.2.4",
+    "@iconify-json/mdi": "^1.2.1",
+    "@types/canvas-confetti": "^1.6.4",
+    "@types/node": "^22.10.0",
+    "@unocss/reset": "^0.64.1",
+    "@vitejs/plugin-vue": "^5.2.0",
+    "@vue/test-utils": "^2.4.6",
+    "eslint": "^9.15.0",
+    "jsdom": "^25.0.1",
+    "pnpm": "^9.14.2",
     "prismjs": "^1.29.0",
-    "taze": "^0.11.2",
-    "typescript": "^5.1.6",
-    "unocss": "^0.54.1",
-    "unplugin-auto-import": "^0.16.6",
-    "unplugin-vue-components": "^0.25.1",
-    "vite": "^4.4.8",
-    "vite-plugin-pages": "^0.31.0",
-    "vitest": "^0.34.1",
-    "vue-tsc": "^1.8.8"
+    "taze": "^0.18.0",
+    "typescript": "^5.7.2",
+    "unocss": "^0.64.1",
+    "unplugin-auto-import": "^0.18.5",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^6.0.0",
+    "vite-plugin-pages": "^0.32.3",
+    "vitest": "^2.1.5",
+    "vue-tsc": "^2.1.10"
   },
   "eslintConfig": {
     "extends": "@antfu"
