--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "type": "module",
   "private": true,
   "packageManager": "pnpm@9.14.2",
-  "type": "module",
   "scripts": {
     "build": "vite build",
     "dev": "vite --host 0.0.0.0",
@@ -28,6 +28,7 @@
     "@iconify-json/mdi": "^1.2.1",
     "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^22.10.0",
+    "@unocss/eslint-plugin": "^0.64.1",
     "@unocss/reset": "^0.64.1",
     "@vitejs/plugin-vue": "^5.2.0",
     "@vue/test-utils": "^2.4.6",
@@ -44,8 +45,5 @@
     "vite-plugin-pages": "^0.32.3",
     "vitest": "^2.1.5",
     "vue-tsc": "^2.1.10"
-  },
-  "eslintConfig": {
-    "extends": "@antfu"
   }
 }
