--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@logicflow/core": "^2.0.8",
     "@logicflow/extension": "^2.0.13",
+    "@logicflow/vue-node-registry": "^1.0.11",
     "@vueuse/core": "v9.1.0",
     "@vueuse/head": "v0.7.9",
     "axios": "^1.7.8",
